[package]
name = "trans2quik"
version = "0.1.1"
authors = ["Denis Stepanov", "<stepanov.d.m@yandex.ru>"]
edition = "2021"
description = "Library for importing transactions, entering orders into the QUIK ARQA Technologies trading system via the API."
readme = "README.md"
repository = "https://github.com/stepanov-denis/trans2quik"
license = "MIT OR Apache-2.0"
keywords = ["moex", "quik", "trans2quik", "trading"]
categories = ["finance"]

[dependencies]
libloading = "0.8.5"
libc = "0.2.162"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.41.1", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
bb8 = "0.8.6"
bb8-postgres = "0.8.1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["db-tokio-postgres"] }
rust_decimal_macros = "1.36"
ta = "0.5.0"
lazy_static = "1.5.0"
