[package]
name = "trans2quik"
version = "1.0.2"
authors = ["Denis Stepanov", "<stepanov.d.m@yandex.ru>"]
edition = "2021"
description = "Library for importing transactions, entering orders into the QUIK ARQA Technologies trading system via the API."
readme = "README.md"
repository = "https://github.com/stepanov-denis/trans2quik"
license = "MIT OR Apache-2.0"
keywords = ["moex", "quik", "trans2quik", "trading"]
categories = ["finance"]

[dependencies]
libloading = "0.8.5"
libc = "0.2.162"
tracing = "0.1.40"
lazy_static = "1.5.0"
encoding_rs = "0.8"
tokio = { version = "1.41.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
